--- a/index.html
+++ b/index.html
@@ -4,9 +4,124 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Poppins:wght@300;400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+    <title>Donate People</title>
 </head>
 <body>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Assumenda dolorem in pariatur perferendis nulla, dolor veritatis libero ad dignissimos! Autem provident quo nam numquam officia soluta deleniti! Nostrum itaque incidunt alias culpa suscipit. Quasi et illo consectetur sequi praesentium exercitationem, ea modi esse. Suscipit quas mollitia obcaecati fugiat, nulla illo laudantium repudiandae eveniet. Amet eos nemo corporis, quasi ipsam totam asperiores ad ipsum, esse voluptatum recusandae quam dolorem eum similique non porro aut enim earum iure id veritatis eius! Reiciendis quisquam repellat quo? Nisi reprehenderit architecto perspiciatis nam doloribus, nemo tempore hic facilis doloremque voluptatum veritatis maiores eveniet magnam deleniti.</p>
+    <section class="background-img">
+        <div class="donate-top">
+            <h1>Let's Help Those Who Are <br> More In Need</h1>
+            <p>Save the Flood Effected people around the world. There are many country  in the world <br> goes down through the water. There people need to our help now.so let's <br> contribute to the donation</p>
+            <div>
+                <button  class="button-design">Donate Now</button>
+            </div>
+        </div>
+    </section>
+    <section class="top-donate">
+        <h1 id="top-donate-h1">Donate Today</h1>
+        <p id="top-donate-p">Donate today to feed a family or shelter a family or giving education to a child. Your donation is <br> needed to help th flood Effected people.</p>
+        <div class="ammount-section">
+            <div class="ammount">
+                <h3>10tk</h3>
+            </div>
+            <div class="ammount-active">
+                <h3>20tk</h3>
+            </div>
+            <div class="ammount">
+                <h3>50tk</h3>
+            </div>
+            <div class="ammount">
+                <h3>100tk</h3>
+            </div>
+            <div class="ammount">
+                <h3>500tk</h3>
+            </div>
+        </div>
+        <div>
+            <div class="amount-submit-main">
+                <div class="amount-submit">
+                    <input type="text" placeholder="Other Amount (Taka)" name="fname">
+                    <button type="button">Donate Now</button>
+                </div>
+                </div>
+    </section>
+    <section>
+       <div class="donate-plan">
+        <h1 id="donate-plan-h1">Our Donate Plan</h1>
+        <p id="donate-plan-p">
+            We collect donation from many places, Everyone donate money,  Our responsibility is to  handover <br> the donation to this  people who really needs it.This is our donate Type.
+        </p>
+       </div>
+        <div class="donate-type">
+            <div class="donate-div-1">
+                <img src="icons/food.png" alt="">
+                <h2>Food For a Family</h2>
+                <p>Give minimum donate for feed a entire family around 6 memnbers so they can get safe from flood.</p>
+            </div>
+            <div class="donate-div-2">
+                <img src="icons/shelter.png" alt="">
+                <h2>Shelter For a Family</h2>
+                <p>Donate money for shelter a family,You can give them shelter  help them by giving shelter.</p>
+            </div>
+            <div class="donate-div-3">
+                <img src="icons/Frame-1.png" alt="">
+                <h2>Education For a Chlid</h2>
+                <p>Take the responsibility to give Education for a Rural child.By giving this oppurtunity to teach a child.</p>
+            </div>
+        </div>
+    </section>
+    <section class="design">
+        <div class="design-1">
+            <h1>Their lives Depends On <br> Your Donation</h1>
+            <p>As a part of our emergency response, we are working with different donors to collect recovery fund including this project. All the funds collected for tackling the flood situation <br> will be channeled towards recovery of flood victims. With your support and dedication of our 35000 pool of volunteers across the country, we will drive to respond to the urge of saving lives.</p>
+            <button class="contribute-btn">How to contribute?</button>
+        </div>
+        <div class="design-1">
+            <img src="images/donation5.jpg" alt="">
+        </div>
+    </section>
+    <section class="design">
+        <div class="design-1">
+            <img src="images/donation6.jpg" alt="">
+        </div>
+        <div class="design-1-1">
+            <h1>They Need Us to Survive</h1>
+            <p>According to the Needs Assessment Working Group of Bangladesh, over 60,000 families in low-lying areas are marooned in  their home or community shelters.Due to heavy <br> flood situation, 15 most affected districts are Chattogram, Cox's Bazar Rangamati,  Khagrachari, Bandarban, Feni, Sylhet..</p>
+            <button class="contribute-btn">How to contribute?</button>
+        </div>
+
+    </section>
+    <section class="design">
+        <div class="design-1">
+            <h1>Emergency Relief for Flood Victims <br> in Bangladesh</h1>
+            <p>Tackling a natural disaster is a long time process because it takes a lot from the affected victims. They become helpless as their crops, livestock's, homes and everything gets affected. <br> To help these people recover in long run, we look forward to your valuable support. Thank you!</p>
+            <button class="contribute-btn">How to contribute?</button>
+        </div>
+        <div class="design-1">
+            <img src="images/donation7.jpg" alt="">
+        </div>
+    </section>
+    
+   
+    <section class="get-update">
+        <div>
+            <h1>Get Our Helps</h1>
+            <p>When a disaster happens, we can quickly send funds to the local  organizations that <br> are best-suited to  drive relief and recovery.</p>
+        </div>
+         <div class="subscribe-btn">
+            <form>
+                <input id="submit-email" type="email" placeholder="Email">
+                <button id="last-btn" type="button">Subscribe</button>
+            </form>
+         </div>
+    </section>
+
 </body>
+<footer class="footer">
+    <h1>Be Humble!</h1>
+    <p>Tafimma gonna Do it!</p>
+</footer>
 </html>
